feat: add data quality drilldown
